# Rust-Data-Code

./: .gitignore  Cargo.toml  README.md  TODO  The whole week 20:4:  User.rs  docker-compose.yml
chapter_2/: fetch_sync.rs  main.rs
chapter_3/: Cargo.toml
chapter_3/migrations/2023-08-25-090159_earthquake_events/: up.sql
chapter_3/src/: fetch.rs  lib.rs  main.rs  models.rs  schema.rs
chapter_4/: Cargo.toml  fetch_store_visual.rs
common/: Cargo.toml
common/src/: earthquake_event.rs  fetch.rs  lib.rs  utils.rs
common/src/blocking/: earthquake_event.rs  fetch.rs  mod.rs
fetch/: Cargo.toml  tutorial.md
fetch/src/: fetch.rs  main.rs
fetch_periodic/: Cargo.toml
fetch_periodic/src/: fetch_sync.rs  main.rs
minmax/: Cargo.toml
minmax/src/: main.rs
periodic_fetch/: Cargo.toml
periodic_fetch/src/: fetch_sync.rs
process_async/: Cargo.toml
process_async/examples/: desere.rs
process_async/src/: clustering.rs  main.rs  mod.rs  statistics.rs  temporal.rs  write.rs
process_async_opentelemetry/: Cargo.toml  sample.json
process_async_opentelemetry/src/: clustering.rs  main.rs  statistics.rs
store_diesel/: .env  Cargo.toml
store_diesel/migrations/2023-08-25-090159_earthquake_events/: down.sql
store_diesel/src/: fetch.rs  lib.rs  main.rs
store_sqlx/: Cargo.toml
store_sqlx/src/: lib.rs  main.rs  models.rs
