[workspace]

members = [
    "fetch",
    "fetch_periodic",
    "store_diesel",
    "store_sqlx",
    "common",
    "minmax",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [
    "json",
] } # reqwest with JSON parsing support
thiserror = "1.0.44"
anyhow = "1.0.72"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15"
