[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
thiserror = "1.0.44"
anyhow = "1.0.72"
chrono = { version = "0.4", features = ["serde"] }
diesel = { workspace = true, features = ["postgres"] }
