[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common", features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
