[package]
name = "process_async"
version = "0.1.0"
edition = "2021"

[dependencies]
common.path = "../common"
tokio = { version = "1.32.0", features = ["full"] }
arrow = "46.0.0"
datafusion = "31.0.0"
parquet = "46.0.0"
rusty-machine = "0.5.4"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
