[package]
name = "process_async"
version = "0.1.0"
edition = "2021"

[dependencies]
common.path = "../common"
tokio = { version = "1.32.0", features = ["full"] }
arrow = "46.0.0"
datafusion = "31.0.0"
parquet = "46.0.0"
rusty-machine = "0.5.4"
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures = "0.3.28"
linfa-clustering = "0.6.1"
linfa = "0.6.1"
ndarray = "0.15.6"
rand_xoshiro = "0.6.0"
ndarray-rand = "0.14.0"
polars = "0.33.2"
