[package]
name = "store_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common", features = ["blocking"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json"] }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
