[package]
name = "store_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common.path = "../common"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono.workspace = true
dotenvy.workspace = true
tokio = { version = "1.32.0", features = ["full"] }
anyhow.workspace = true
